--- a/TFG-Project/TFG-Project/TFG-Project.vcxproj
+++ b/TFG-Project/TFG-Project/TFG-Project.vcxproj
@@ -88,7 +88,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)Dependencies\GLFW\include;$(SolutionDir)Dependencies\GLEW\include;$(SolutionDir)Dependencies\GLM\include;$(SolutionDir)Dependencies\SOIL2\include;$(SolutionDir)Dependencies\ASSIMP\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)Dependencies\GLFW\include;$(SolutionDir)Dependencies\GLEW\include;$(SolutionDir)Dependencies\GLM\include;$(SolutionDir)Dependencies\SOIL2\include;$(SolutionDir)Dependencies\ASSIMP\include;$(SolutionDir)Dependencies\IMGUI\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -106,7 +106,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)Dependencies\GLFW\include;$(SolutionDir)Dependencies\GLEW\include;$(SolutionDir)Dependencies\GLM\include;$(SolutionDir)Dependencies\SOIL2\include;$(SolutionDir)Dependencies\ASSIMP\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)Dependencies\GLFW\include;$(SolutionDir)Dependencies\GLEW\include;$(SolutionDir)Dependencies\GLM\include;$(SolutionDir)Dependencies\SOIL2\include;$(SolutionDir)Dependencies\ASSIMP\include;$(SolutionDir)Dependencies\IMGUI\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -150,6 +150,12 @@
     <ClCompile Include="src\CLEngine\src\Built-In-Classes\CLColor.cpp" />
     <ClCompile Include="src\CLEngine\src\CLEngine.cpp" />
     <ClCompile Include="src\CLEngine\src\Frustum\CLFrustum.cpp" />
+    <ClCompile Include="src\CLEngine\src\IMGUI\imgui.cpp" />
+    <ClCompile Include="src\CLEngine\src\IMGUI\imgui_demo.cpp" />
+    <ClCompile Include="src\CLEngine\src\IMGUI\imgui_draw.cpp" />
+    <ClCompile Include="src\CLEngine\src\IMGUI\imgui_impl_glfw.cpp" />
+    <ClCompile Include="src\CLEngine\src\IMGUI\imgui_impl_opengl3.cpp" />
+    <ClCompile Include="src\CLEngine\src\IMGUI\imgui_widgets.cpp" />
     <ClCompile Include="src\CLEngine\src\main.cpp" />
     <ClCompile Include="src\CLEngine\src\ResourceManager\CLResource.cpp" />
     <ClCompile Include="src\CLEngine\src\ResourceManager\CLResourceManager.cpp" />
@@ -175,6 +181,14 @@
     <ClInclude Include="src\CLEngine\src\CLEngine.h" />
     <ClInclude Include="src\CLEngine\src\Constants.h" />
     <ClInclude Include="src\CLEngine\src\Frustum\CLFrustum.h" />
+    <ClInclude Include="src\CLEngine\src\IMGUI\imconfig.h" />
+    <ClInclude Include="src\CLEngine\src\IMGUI\imgui.h" />
+    <ClInclude Include="src\CLEngine\src\IMGUI\imgui_impl_glfw.h" />
+    <ClInclude Include="src\CLEngine\src\IMGUI\imgui_impl_opengl3.h" />
+    <ClInclude Include="src\CLEngine\src\IMGUI\imgui_internal.h" />
+    <ClInclude Include="src\CLEngine\src\IMGUI\imstb_rectpack.h" />
+    <ClInclude Include="src\CLEngine\src\IMGUI\imstb_textedit.h" />
+    <ClInclude Include="src\CLEngine\src\IMGUI\imstb_truetype.h" />
     <ClInclude Include="src\CLEngine\src\ResourceManager\CLResource.h" />
     <ClInclude Include="src\CLEngine\src\ResourceManager\CLResourceManager.h" />
     <ClInclude Include="src\CLEngine\src\ResourceManager\CLResourceMaterial.h" />
