--- a/TFG-Project/Genetic-Algorithm/Genetic-Algorithm.vcxproj.filters
+++ b/TFG-Project/Genetic-Algorithm/Genetic-Algorithm.vcxproj.filters
@@ -5,11 +5,15 @@
     <ClCompile Include="src\Program.cpp" />
     <ClCompile Include="src\Entities\Entity.cpp" />
     <ClCompile Include="src\Entities\EMesh.cpp" />
+    <ClCompile Include="src\Entities\ECamera.cpp" />
+    <ClCompile Include="src\Render\RenderEngine.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Program.h" />
     <ClInclude Include="src\Entities\Entity.h" />
     <ClInclude Include="src\Entities\EMesh.h" />
     <ClInclude Include="src\Utils\Shaders.h" />
+    <ClInclude Include="src\Entities\ECamera.h" />
+    <ClInclude Include="src\Render\RenderEngine.h" />
   </ItemGroup>
 </Project>
