--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,14 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# Mine
+Debug/
+.vs/
+.vs
+*.tlog
+Execution/
+Release/
+
 # User-specific files
 *.rsuser
 *.suo
@@ -361,8 +369,3 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 
-# Mine
-Debug/
-.vs/
-.vs
-*.tlog
