--- a/TFG-Project/Genetic-Algorithm/Genetic-Algorithm.vcxproj
+++ b/TFG-Project/Genetic-Algorithm/Genetic-Algorithm.vcxproj
@@ -27,6 +27,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\DataTypes\Transformable.cpp" />
     <ClCompile Include="src\Render\RenderEngine.cpp" />
     <ClCompile Include="src\Entities\ECamera.cpp" />
     <ClCompile Include="src\Entities\EMesh.cpp" />
@@ -37,6 +38,7 @@
     <ClCompile Include="src\State\StateExecution.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\DataTypes\Transformable.h" />
     <ClInclude Include="src\Render\RenderEngine.h" />
     <ClInclude Include="src\Entities\ECamera.h" />
     <ClInclude Include="src\Entities\EMesh.h" />
