--- a/TFG-Project/Genetic-Algorithm/imgui.ini
+++ b/TFG-Project/Genetic-Algorithm/imgui.ini
@@ -4,27 +4,27 @@ Size=400,400
 Collapsed=0
 
 [Window][Modifica ilumnacion]
-Pos=71,62
-Size=333,149
+Pos=148,112
+Size=278,121
 Collapsed=0
 
-[Window][Hello, world!]
-Pos=36,66
-Size=345,180
+[Window][Modifica ilumnacion2]
+Pos=60,60
+Size=103,54
 Collapsed=0
 
-[Window][Dear ImGui Demo]
-Pos=650,20
-Size=550,680
+[Window][Modifica ilumnacion 2]
+Pos=60,60
+Size=103,54
 Collapsed=0
 
 [Window][Ventana 1]
-Pos=306,341
-Size=156,71
+Pos=60,60
+Size=203,129
 Collapsed=0
 
 [Window][Ventana 2]
-Pos=471,126
-Size=225,105
+Pos=498,112
+Size=184,159
 Collapsed=0
 
