--- a/TFG-Project/Genetic-Algorithm/Genetic-Algorithm.vcxproj.filters
+++ b/TFG-Project/Genetic-Algorithm/Genetic-Algorithm.vcxproj.filters
@@ -17,6 +17,7 @@
     <ClCompile Include="src\IMGUI\imgui_impl_opengl3.cpp" />
     <ClCompile Include="src\IMGUI\imgui_widgets.cpp" />
     <ClCompile Include="src\Render\ImGuiManager.cpp" />
+    <ClCompile Include="src\Physics\PhysicsEngine.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Program.h" />
@@ -37,5 +38,6 @@
     <ClInclude Include="src\IMGUI\imstb_textedit.h" />
     <ClInclude Include="src\IMGUI\imstb_truetype.h" />
     <ClInclude Include="src\Render\ImGuiManager.h" />
+    <ClInclude Include="src\Physics\PhysicsEngine.h" />
   </ItemGroup>
 </Project>
