--- a/TFG-Project/Genetic-Algorithm/imgui.ini
+++ b/TFG-Project/Genetic-Algorithm/imgui.ini
@@ -19,12 +19,22 @@ Size=103,54
 Collapsed=0
 
 [Window][Ventana 1]
-Pos=60,60
-Size=203,129
+Pos=-1,3
+Size=291,191
 Collapsed=0
 
 [Window][Ventana 2]
 Pos=498,112
 Size=184,159
+Collapsed=0
+
+[Window][Entities transformables]
+Pos=1,3
+Size=565,192
+Collapsed=0
+
+[Window][Entity 1]
+Pos=68,79
+Size=180,100
 Collapsed=0
 
