--- a/TFG-Project/SparkEngine/imgui.ini
+++ b/TFG-Project/SparkEngine/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=7,6
 Size=400,400
 Collapsed=0
 
@@ -26,5 +26,30 @@ Collapsed=0
 [Window][Ventana 2]
 Pos=471,126
 Size=225,105
+Collapsed=0
+
+[Window][1]
+Pos=70,31
+Size=299,166
+Collapsed=0
+
+[Window][Example: Console]
+Pos=60,60
+Size=520,600
+Collapsed=0
+
+[Window][Example: Long text display]
+Pos=60,60
+Size=520,600
+Collapsed=0
+
+[Window][Example: Auto-resizing window]
+Pos=156,119
+Size=450,114
+Collapsed=0
+
+[Window][Camera transformable]
+Pos=60,60
+Size=250,178
 Collapsed=0
 
