--- a/TFG-Project/Genetic-Algorithm/imgui.ini
+++ b/TFG-Project/Genetic-Algorithm/imgui.ini
@@ -29,12 +29,17 @@ Size=184,159
 Collapsed=0
 
 [Window][Entities transformables]
-Pos=7,4
-Size=372,381
+Pos=0,2
+Size=366,299
 Collapsed=0
 
 [Window][Entity 1]
 Pos=68,79
 Size=180,100
+Collapsed=0
+
+[Window][Debug]
+Pos=0,304
+Size=148,69
 Collapsed=0
 
