--- a/TFG-Project/Genetic-Algorithm/imgui.ini
+++ b/TFG-Project/Genetic-Algorithm/imgui.ini
@@ -29,7 +29,7 @@ Size=184,159
 Collapsed=0
 
 [Window][Entities transformables]
-Pos=4,0
+Pos=1,1
 Size=369,489
 Collapsed=0
 
@@ -41,5 +41,10 @@ Collapsed=0
 [Window][Debug]
 Pos=0,489
 Size=371,80
+Collapsed=0
+
+[Window][Genetic algorithm debug]
+Pos=1018,5
+Size=260,254
 Collapsed=0
 
