--- a/TFG-Project/Genetic-Algorithm/Genetic-Algorithm.vcxproj.filters
+++ b/TFG-Project/Genetic-Algorithm/Genetic-Algorithm.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="src\DataTypes\OBBCollider.cpp" />
     <ClCompile Include="src\Entities\Compositions\ESkeleton.cpp" />
     <ClCompile Include="src\GeneticAlgorithm\GeneticAlgorithm.cpp" />
+    <ClCompile Include="src\IMGUI\implot_items.cpp" />
+    <ClCompile Include="src\IMGUI\implot_demo.cpp" />
+    <ClCompile Include="src\IMGUI\implot.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Program.h" />
@@ -47,6 +50,8 @@
     <ClInclude Include="src\Utils\Utils.h" />
     <ClInclude Include="src\GeneticAlgorithm\GeneticAlgorithm.h" />
     <ClInclude Include="src\Utils\Config.h" />
+    <ClInclude Include="src\IMGUI\implot.h" />
+    <ClInclude Include="src\IMGUI\implot_internal.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="src\CMakeLists.txt" />
