--- a/TFG-Project/Genetic-Algorithm/imgui.ini
+++ b/TFG-Project/Genetic-Algorithm/imgui.ini
@@ -44,7 +44,12 @@ Size=350,81
 Collapsed=0
 
 [Window][Genetic algorithm debug]
-Pos=3,1
+Pos=1,3
 Size=346,310
+Collapsed=0
+
+[Window][My Window]
+Pos=670,312
+Size=529,335
 Collapsed=0
 
