--- a/TFG-Project/Genetic-Algorithm/imgui.ini
+++ b/TFG-Project/Genetic-Algorithm/imgui.ini
@@ -29,7 +29,7 @@ Size=184,159
 Collapsed=0
 
 [Window][Entities transformables]
-Pos=346,533
+Pos=346,531
 Size=338,193
 Collapsed=0
 
@@ -39,17 +39,57 @@ Size=180,100
 Collapsed=0
 
 [Window][Debug]
-Pos=-1,640
-Size=350,81
+Pos=-1,556
+Size=349,167
 Collapsed=0
 
 [Window][Genetic algorithm debug]
 Pos=1,0
-Size=350,641
+Size=347,557
 Collapsed=0
 
 [Window][My Window]
 Pos=670,312
 Size=529,335
+Collapsed=0
+
+[Window][Simulation configuration]
+Pos=0,4
+Size=538,486
+Collapsed=0
+
+[Window][Example: Console]
+Pos=60,60
+Size=520,600
+Collapsed=0
+
+[Window][Example: Log]
+Pos=60,60
+Size=500,400
+Collapsed=0
+
+[Window][Example: Property editor]
+Pos=60,60
+Size=430,450
+Collapsed=0
+
+[Window][Dear ImGui Metrics]
+Pos=60,60
+Size=338,239
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+Pos=650,20
+Size=550,680
+Collapsed=0
+
+[Window][Dear ImGui Style Editor]
+Pos=60,60
+Size=353,714
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=141,55
+Size=420,391
 Collapsed=0
 
