--- a/TFG-Project/Genetic-Algorithm/imgui.ini
+++ b/TFG-Project/Genetic-Algorithm/imgui.ini
@@ -39,13 +39,13 @@ Size=180,100
 Collapsed=0
 
 [Window][Debug]
-Pos=-1,557
-Size=349,167
+Pos=468,551
+Size=476,169
 Collapsed=0
 
 [Window][Genetic algorithm debug]
-Pos=0,1
-Size=347,556
+Pos=-1,-1
+Size=470,722
 Collapsed=0
 
 [Window][My Window]
